tetris-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tetris
  labels:
    name: tetris
    environment: production
