tetris-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
  namespace: tetris
spec:
  replicas: 3
  selector:
    matchLabels:
      app: game-tetris
  template:
    metadata:
      labels:
        app: game-tetris
    spec:
      containers:
      - name: tetris-app
        image: thamaraikannans/tetris:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tetris-service
  namespace: tetris
spec:
  selector:
    app: game-tetris
  ports:
  - port: 80
    targetPort: 80
